// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform fixtures comments.ts 1`] = `
"import { ref, computed } from 'vue';/* import { ref } from 'vue' */
// import { computed } from 'vue'

const foo = ref(0)
const bar = computed(() => {})

// reactive
"
`;

exports[`transform fixtures custom.js 1`] = `
"import { default as customDefault, customNamed } from 'custom';const a = customDefault(customNamed())
"
`;

exports[`transform fixtures non-target.js 1`] = `
"useNonTarget()
"
`;

exports[`transform fixtures react.jsx 1`] = `
"import { useState } from 'react';export function Component() {
  const [count, setCount] = useState()

  return <div>{ count }</div>
}
"
`;

exports[`transform fixtures react-existing.jsx 1`] = `
"import React, { useState } from 'react';

export function Component() {
  const [count, setCount] = useState()

  return <div>{ count }</div>
}
"
`;

exports[`transform fixtures vue.js 1`] = `
"import { ref } from 'vue';const a = ref(0)
"
`;
